--- a/manifest.json
+++ b/manifest.json
@@ -43,6 +43,14 @@
       "run_at": "document_end"
     },
     {
+      "matches": ["*://www.2345.com/*"],
+      "js": [
+        "front/2345.js"
+      ],
+      "all_frames": true,
+      "run_at": "document_end"
+    },
+    {
       "matches": ["*://pc.qq.com/detail/*"],
       "js": [
         "front/qqsoft.js"
