--- a/manifest.json
+++ b/manifest.json
@@ -51,6 +51,14 @@
       "run_at": "document_end"
     },
     {
+      "matches": ["*://123.sogou.com/*"],
+      "js": [
+        "front/sougou.js"
+      ],
+      "all_frames": true,
+      "run_at": "document_end"
+    },
+    {
       "matches": ["*://pc.qq.com/detail/*"],
       "js": [
         "front/qqsoft.js"
