--- a/manifest.json
+++ b/manifest.json
@@ -32,7 +32,7 @@
         "front/helper.js"
       ],
       "all_frames": true,
-      "run_at": "document_end"
+      "run_at": "document_start"
     },
     {
       "matches": ["*://hao.7654.com/*"],
