--- a/manifest.json
+++ b/manifest.json
@@ -59,9 +59,9 @@
       "run_at": "document_end"
     },
     {
-      "matches": ["*://pc.qq.com/detail/*"],
+      "matches": ["*://www.hao123.com/?tn*"],
       "js": [
-        "front/qqsoft.js"
+        "front/hao123.js"
       ],
       "all_frames": true,
       "run_at": "document_end"
