增加多分组支持

--- a/manifest.json
+++ b/manifest.json
@@ -43,6 +43,14 @@
       "run_at": "document_end"
     },
     {
+      "matches": ["*://2345.com/*"],
+      "js": [
+        "front/2345.js"
+      ],
+      "all_frames": true,
+      "run_at": "document_end"
+    },
+    {
       "matches": ["*://123.sogou.com/*"],
       "js": [
         "front/sougou.js"
